--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "airbnb-clone",
+  "name": "airbnb",
   "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
