--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
-    "eslint": "9.4.0",
-    "eslint-config-next": "14.2.3",
+    "eslint": "8.0",
+    "eslint-config-next": "^14.2.4",
     "leaflet": "^1.9.4",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
